--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,7 @@ body {
     font-family: 'Comic Sans MS', cursive;
     background: linear-gradient(45deg, #ff00ff, #00ffff, #ffff00, #00ff00);
     background-size: 400% 400%;
+    background-attachment: fixed;
     color: #000;
 }
 
