Renamed files and added required comments

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,12 @@
-/* Early 2000s Retro Website Styling */
+/*
+    Name: Matthew Burden
+    Date: 11/01/2025
+    CSC 372-01
 
+    This is the main CSS for my HTML page that gives it an early 2000s retro website style.
+*/
+
+/* Early 2000s Retro Website Styling */
 * {
     margin: 0;
     padding: 0;
